changes in ex05, ex07, ex10

--- a/d01/ex10/Makefile
+++ b/d01/ex10/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 #******************************************************************************#
 
-NAME = pony
+NAME = cato9tails
 
 FLAGS = -Wall -Wextra -Werror
 
