--- a/d01/ex07/Makefile
+++ b/d01/ex07/Makefile
@@ -10,11 +10,11 @@
 #                                                                              #
 #******************************************************************************#
 
-NAME = pony
+NAME = replace
 
 FLAGS = -Wall -Wextra -Werror
 
-SRC = main.cpp Zombie.cpp ZombieHorde.cpp
+SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
